--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -2,7 +2,7 @@
 name = "python-template"
 version = "0.1.0"
 description = "{{ cookiecutter.project_description }}"
-authors = ["Jona Koenemann"]
+authors = "{{ cookiecutter.author }}"
 readme = "README.md"
 
 [tool.poetry.dependencies]
