added ressources in manifest file

--- a/{{cookiecutter.project_slug}}/manifest.yaml
+++ b/{{cookiecutter.project_slug}}/manifest.yaml
@@ -2,4 +2,7 @@ features:
   - name: gui_structure
     enabled: "{{ cookiecutter.include_gui_structure }}"
     resources:
-      - r"{{cookiecutter.project_slug}}\models"
+      - "models"
+      - "src//features"
+      - "src//models"
+      - "src//visualizations"
