lower cookiecutter variable in manifest file

--- a/{{cookiecutter.project_slug}}/manifest.yaml
+++ b/{{cookiecutter.project_slug}}/manifest.yaml
@@ -1,6 +1,6 @@
 features:
   - name: gui_structure
-    enabled: "{{ cookiecutter.include_gui_structure }}"
+    enabled: "{{ cookiecutter.include_gui_structure|lower }}"
     resources:
       - "models"
       - "src//features"
