--- a/{{cookiecutter.project_slug}}/manifest.yaml
+++ b/{{cookiecutter.project_slug}}/manifest.yaml
@@ -6,9 +6,15 @@ features:
       - "src\\features"
       - "src\\models"
       - "src\\visualization"
+
   - name: gui_structure
     enabled: "{{ cookiecutter.include_gui_structure|lower }}"
     resources:
       - "src\\pages"
       - "src\\style"
       - "src\\widgets"
+      
+  - name: sphinx_documentation
+    enabled: "{{ cookiecutter.use_sphinx_documentation|lower }}"
+    resources:
+      - "src\\docs"
