ENV:ENH remove pre-commit config file if feature is disabled

--- a/{{cookiecutter.project_slug}}/manifest.yaml
+++ b/{{cookiecutter.project_slug}}/manifest.yaml
@@ -19,3 +19,8 @@ features:
     enabled: "{{ cookiecutter.use_sphinx_documentation|lower }}"
     resources:
       - "docs"
+
+  - name: pre_commits
+    enabled: "{{ cookiecutter.use_pre_commits|lower }}"
+    resources:
+      - ".pre-commit-config.yaml" 
