--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,6 +29,8 @@ repos:
     rev: 3.7.8  # pick a git hash / tag to point to
     hooks:
     -   id: flake8
+        args:
+            - --max-line-length=100
 
 -   repo: https://github.com/psf/black-pre-commit-mirror
     rev: 24.3.0
