--- a/{{cookiecutter.project_slug}}/.pre-commit-config.yaml
+++ b/{{cookiecutter.project_slug}}/.pre-commit-config.yaml
@@ -30,6 +30,8 @@ repos:
     rev: 3.7.8  # pick a git hash / tag to point to
     hooks:
     -   id: flake8
+        args:
+                - --max-line-length=100
 
 -   repo: https://github.com/psf/black-pre-commit-mirror
     rev: 24.3.0
@@ -45,4 +47,3 @@ repos:
     rev: master
     hooks:
     -   id: darglint2
-
